correção de função de plot

--- a/.gitignore
+++ b/.gitignore
@@ -917,3 +917,4 @@ hs_err_pid*
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,react,reactnative,androidstudio,flask,pycharm,webstorm,node
+Projeto-01/teste.py
